feat(runtime): fully switch to v4 runtime path
